SERVER-35181 Corrected function signatures for CpuProfilerCommand

Note that this also adds a RHEL 7.0 variant specifically for Dagger
and gperftools