src/mongo/db/commands/cpuprofile.cpp
@@ -71,7 +71,7 @@ namespace {
 class CpuProfilerCommand : public ErrmsgCommandDeprecated {
 public:
     CpuProfilerCommand(char const* name) : ErrmsgCommandDeprecated(name) {}
-    AllowedOnSecondary secondaryAllowed() const override {
+    AllowedOnSecondary secondaryAllowed(ServiceContext* context) const override {
         return AllowedOnSecondary::kAlways;
     }
     bool adminOnly() const override {
@@ -82,7 +82,7 @@ public:
     }
     void addRequiredPrivileges(const std::string& dbname,
                                const BSONObj& cmdObj,
-                               std::vector<Privilege>* out) override {
+                               std::vector<Privilege>* out) const override {
         ActionSet actions;
         actions.addAction(ActionType::cpuProfiler);
         out->push_back(Privilege(ResourcePattern::forClusterResource(), actions));
